--- a/VisitedAirports.html
+++ b/VisitedAirports.html
@@ -20,19 +20,16 @@
 		<div id="map"></div>
 		<script>
 			var map;
-			var coordKMYF = {lat: 32.814699, lng: -117.138591};
 			function initMap() {
 			map = new google.maps.Map(document.getElementById('map'), {
-			center: {lat: 33.5, lng: -117.0},
-			mapTypeId: google.maps.MapTypeId.TERRAIN,
-			zoom: 8
+				center: {lat: 33.5, lng: -117.0},
+				mapTypeId: google.maps.MapTypeId.TERRAIN,
+				zoom: 8
 			});
-			var KMYF = new google.maps.Marker({
-			position: coordKMYF,
-			map: map,
-			title: 'KMYF'
+			var kmlLayer = new google.maps.KmlLayer({
+				url: '
+				map: map
 			});
-			}
 		</script>
 		<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD8AONb-Km7AmoWGVMkP25CD0aMUhfBNu8&callback=initMap"
 			async defer></script>
