--- a/VisitedAirports.html
+++ b/VisitedAirports.html
@@ -27,7 +27,7 @@
 				zoom: 8
 			});
 			var kmlLayer = new google.maps.KmlLayer({
-				url: '
+				url: 'https://raw.githubusercontent.com/theSadnap/AviationData/master/britoper.kml'
 				map: map
 			});
 		</script>
