--- a/VisitedAirports.html
+++ b/VisitedAirports.html
@@ -27,7 +27,7 @@
 	  zoom: 8
 	});
 	var kmlLayer = new google.maps.KmlLayer({
-	  url: 'https://raw.githubusercontent.com/theSadnap/AviationData/master/britoper.kml',
+	  url: 'https://thesadnap.github.io/britoper.kml'
 	  suppressInfoWindows: true,
 	  map: map
 	});
