--- a/VisitedAirports.html
+++ b/VisitedAirports.html
@@ -38,7 +38,7 @@
       ['L18',33.35,-117.25]
       ];
       function setMarkers(map) {
-	      for var i=0; i<Airports.length; i++) {
+	      for (var i=0; i<Airports.length; i++) {
 		      var airport = Airports[i]
 		      var marker = new google.maps.Marker({
 			      position: {lat: airport[1], lng: airport[2]},
