--- a/VisitedAirports.html
+++ b/VisitedAirports.html
@@ -12,11 +12,13 @@
       }
       #map {
 	height: 500px;
-	width: 900px;
+	width: 955px;
+	margin: auto;
       }
     </style>
   </head>
   <body>
+    <h2 style="text-align: center;">Airports I've Landed At<h2>
     <div id="map"></div>
     <script>
       var map;
