--- a/VisitedAirports.html
+++ b/VisitedAirports.html
@@ -37,6 +37,7 @@
       ['KCRQ',33.13,-117.28],
       ['KSDM',32.57,-116.98],
       ['KHMT',33.73,-117.02],
+      ['KTOA',33.80,-118.34],
       ['L18',33.35,-117.25]
       ];
       function setMarkers(map) {
